// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator zod {
  provider = "zod-prisma"
  output   = "../models" // (default) the directory where generated zod schemas will be saved

  relationModel = true // (default) Create and export both plain and related models.
  // relationModel         = "default" // Do not export model without relations.
  // relationModel         = false // Do not generate related model

  modelCase = "PascalCase" // (default) Output models using pascal case (ex. UserModel, PostModel)
  // modelCase             = "camelCase" // Output models using camel case (ex. userModel, postModel)

  modelSuffix = "Model" // (default) Suffix to apply to your prisma models when naming Zod schemas

  // useDecimalJs          = false // (default) represent the prisma Decimal type using as a JS number
  useDecimalJs = true // represent the prisma Decimal type using Decimal.js (as Prisma does)

  // imports                  = null // (default) will import the referenced file in generated schemas to be used via imports.someExportedVariable

  // https://www.prisma.io/docs/concepts/components/prisma-client/working-with-fields/working-with-json-fields#filtering-by-null-values
  // prismaJsonNullability    = true // (default) uses prisma's scheme for JSON field nullability
  // prismaJsonNullability = false // allows null assignment to optional JSON fields
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  /// @zod.optional()
  id        Int      @id @default(autoincrement())
  name      String
  email     String   @unique
  password  String
  /// @zod.optional()
  role      UserRole @default(USER)
  /// @zod.optional()
  createdAt DateTime @default(now()) @db.Timestamp(6)
  /// @zod.optional()
  updatedAt DateTime @updatedAt

  @@index([id, email])
  @@map("users")
}

enum UserRole {
  ADMIN
  USER
}

model Customer {
  /// @zod.optional()
  id        Int       @id @default(autoincrement())
  name      String
  email     String    @unique
  /// @zod.optional()
  createdAt DateTime  @default(now()) @db.Timestamp(6)
  /// @zod.optional()
  updatedAt DateTime  @updatedAt
  bookings   Booking[]

  @@index([id, email])
  @@map("customers")
}

model Service {
  id        Int              @id @default(autoincrement())
  name      String
  fee       Int
  bookings  BookingService[]
  createdAt DateTime         @default(now()) @db.Timestamp(6)
  updatedAt DateTime         @updatedAt

  @@index([id])
  @@map("services")
}

model Booking {
  /// @zod.optional()
  id         Int              @id @default(autoincrement())
  parking_fee Int
  duration   Int
  customer   Customer         @relation(fields: [customer_id], references: [id])
  services   BookingService[]
  car_no     String
  /// @zod.optional()
  note       String?
  /// @zod.optional()
  createdAt  DateTime         @default(now()) @db.Timestamp(6)
  /// @zod.optional()
  updatedAt  DateTime         @updatedAt
  customer_id Int

  @@index([id])
  @@map("bookings")
}

model BookingService {
  id        Int      @id @default(autoincrement())
  bookingId Int
  serviceId Int
  Booking   Booking  @relation(fields: [bookingId], references: [id])
  Service   Service  @relation(fields: [serviceId], references: [id])
  createdAt DateTime @default(now()) @db.Timestamp(6)
  updatedAt DateTime @updatedAt

  @@index([id])
  @@map("booking_service")
}
